Fix syntax error in huggingface.api.token property

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,7 +3,7 @@ server.port=${SERVER_PORT}
 
 # huggingface configuration
 huggingface.api.url=${HUGGINGFACE_URI}
-huggingface.api.token=${HUGGINGFACE_TOKEN}}
+huggingface.api.token=${HUGGINGFACE_TOKEN}
 
 # spring.data.mongodb.host=localhost
 # spring.data.mongodb.port=27017
