--- a/.github/workflows/ping-render.yml
+++ b/.github/workflows/ping-render.yml
@@ -1,15 +1,13 @@
-name: Keep alive
+name: Keep Render Backend Alive
 
 on:
   schedule:
-    - cron: '0 * * * *'
+    - cron: "*/5 * * * *"  # every 5 minutes
   workflow_dispatch:
 
 jobs:
   ping:
     runs-on: ubuntu-latest
     steps:
-      - name: Ping Render app
-        run: curl -s o /dev/null https://airesumeanalyse.vercel.app/auth
-      
-      
+      - name: Ping backend
+        run: curl -s -o /dev/null https://airesumeanalyser-7lqj.onrender.com/health || true
